--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,11 @@
       "src": "/android-chrome-192x192.ico",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-192x192.ico",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
